2015-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): P_tmpdir is
	not an environment variable.  Need to consider Windows environment
	variables for Cygwin.

	* magick/random.c (InitializeMagickRandomKernel): For Microsoft
	Windows, use CryptGenRandom() to salt the built-in random number
	generator.

2015-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickRandReentrant): Quiet Coverity 10092
	"Calling risky function".
	(MagickRandNewSeed): Quiet Coverity 10093 "Calling risky
	function".

	* coders/tga.c (ReadTGAImage): Quiet Coverity 10201 "Identical
	code for different branches".

	* coders/pcx.c (ReadPCXImage): Quiet Coverity 10218 "Identical
	code for different branches".

2015-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetGeometry): Fix handling of area geometries
	in the form "5000000@".  Resolves SourceForge issue #299 "-resize
	with @ and > in geometry specification".

2015-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Disable matte channel for
	compression types which don't support it.  Resolves SourceForge
	bug #297 "GM distorts image using -transform".
	(WriteTIFFImage): When type is Optimize, disable matte channel if
	image is opaque.

2015-05-09  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* webp/src/utils/endian_inl.h: Fixed defect in intrinsic function
	byteswap_ulong for Visual Studio less than 2005.

2015-05-08  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* VisualMagick/configure/system_page.cpp,
	VisualMagick/configure/system_page.h: Suppress reloading .vcproj
	when configuration type does not change.

2015-05-08  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* VisualMagick/configure/system_page.cpp,
	VisualMagick/configure/system_page.h,
	VisualMagick/configure/target_page.h: Ability to re-use already
	given paths. It is highly frustrating to enter path for different