@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150516"
-#define public MagickPackageReleaseDate "snapshot-20150516"
+#define public MagickPackageVersionAddendum ".020150517"
+#define public MagickPackageReleaseDate "snapshot-20150517"
